Update to OnboardingTask list view and models to replace UUID with integer labels to allow sorting in order of creation.

--- a/nautobot_device_onboarding/templates/nautobot_device_onboarding/onboardingtask.html
+++ b/nautobot_device_onboarding/templates/nautobot_device_onboarding/onboardingtask.html
@@ -35,6 +35,10 @@
             </div>
             <table class="table table-hover panel-body attr-table">
                 <tr>
+                    <td>Label</td>
+                    <td>{{ object.label|placeholder }}</td>
+                </tr>
+                <tr>
                     <td>Created Device</td>
                     <td>{{ object.created_device|placeholder }}</td>
                 </tr>
