--- a/nautobot_device_onboarding/templates/nautobot_device_onboarding/onboardingtask.html
+++ b/nautobot_device_onboarding/templates/nautobot_device_onboarding/onboardingtask.html
@@ -55,8 +55,8 @@
                     <td>{{ object.timeout|placeholder }}</td>
                 </tr>
                 <tr>
-                    <td>Site</td>
-                    <td>{{ object.site|placeholder }}</td>
+                    <td>Location</td>
+                    <td>{{ object.location|placeholder }}</td>
                 </tr>
                 <tr>
                     <td>Role</td>
