--- a/nautobot_device_onboarding/templates/nautobot_device_onboarding/onboardingtask_create.html
+++ b/nautobot_device_onboarding/templates/nautobot_device_onboarding/onboardingtask_create.html
@@ -1,2 +1,16 @@
-{% include 'generic/object_edit.html' %}
-{% load form_helpers %}
+{% extends 'generic/object_detail.html' %}
+
+{% block buttons %}
+{% endblock buttons %}
+{% block content %}
+<div class="row">
+	<div class="alert alert-danger text-center" role="alert">
+        All functionality for Device Onboarding has been disabled, please upgrade to v3.0.0 or later. More details are available in the 
+        <a href="https://github.com/nautobot/nautobot-plugin-device-onboarding/releases/tag/v3.0.0">
+            v3.0.0 release notes
+        </a>
+        <br/>
+        v2.0.0-2.0.2 have been removed from PyPI, the currently installed version is v2.0.3 which was created as a notification mechanism for deployments pinned to the v2 major release.
+    </div>
+</div>
+{% endblock %}
