Nornir and YAML DSL Onboarding 4.0 contributions
Co-Authored-By: Jeff Kala <48843785+jeffkala@users.noreply.github.com>

--- a/development/towncrier_template.j2
+++ b/development/towncrier_template.j2
@@ -1,6 +1,6 @@
 
 {% if render_title %}
-## [v{{ versiondata.version }} ({{ versiondata.date }})]({{ cookiecutter.repo_url }}/releases/tag/v{{ versiondata.version}})
+## v{{ versiondata.version }} ({{ versiondata.date }})
 
 {% endif %}
 {% for section, _ in sections.items() %}
