Add the script type.

--- a/nautobot_device_onboarding/templates/nautobot_device_onboarding/ssot_sync_devices.html
+++ b/nautobot_device_onboarding/templates/nautobot_device_onboarding/ssot_sync_devices.html
@@ -40,7 +40,7 @@
 
 {% block javascript %}
   {{ block.super }}
-  <script>
+  <script type="text/javascript">
     const csvInput = document.getElementById('id_csv_file');
     const manualRequiredFields = [
       "id_location", "id_namespace", "id_ip_addresses", "id_device_role", 
