--- a/nautobot_device_onboarding/templates/nautobot_device_onboarding/ssot_sync_devices.html
+++ b/nautobot_device_onboarding/templates/nautobot_device_onboarding/ssot_sync_devices.html
@@ -5,7 +5,7 @@
 
 {% render_form job_form excluded_fields="['location', 'namespace', 'ip_addresses', 'device_role', 'device_status', 'interface_status', 'ip_address_status', 'port', 'timeout', 'secrets_group', 'platform', 'set_mgmt_only', 'update_devices_without_primary_ip', 'csv_file']" %}
 
-    {% with csv_tab_active=form.initial.csv_input%}
+    {% with csv_tab_active=form.initial.csv_input %}
     <ul class="nav nav-tabs" role="tablist">
         <li role="presentation"{% if not csv_tab_active %} class="active"{% endif %}>
             <a href="#job_manual_input" role="tab" data-toggle="tab">Manual Input</a>
@@ -40,7 +40,7 @@
 
 {% block javascript %}
   {{ block.super }}
-  <script type="text/javascript">
+  <script>
     const csvInput = document.getElementById('id_csv_file');
     const manualRequiredFields = [
       "id_location", "id_namespace", "id_ip_addresses", "id_device_role", 
@@ -48,10 +48,10 @@
       "id_port", "id_timeout", "id_secrets_group"
     ];
 
-    function setFieldRequired(field, isRequired) {
-      const element = document.getElementById(field);
+    function setFieldRequired(fieldId, isRequired) {
+      const element = document.getElementById(fieldId);
       element.required = isRequired;
-      const label = document.querySelector(`label[for="${field}"]`);
+      const label = document.querySelector(`label[for="${fieldId}"]`);
       if (isRequired) {
         label.classList.add('required');
       } else {
@@ -59,7 +59,7 @@
       }
     }
 
-    $(document).ready(function() {
+    document.addEventListener("DOMContentLoaded", function() {
       manualRequiredFields.forEach(field => setFieldRequired(field, true));
 
       $('.nav-tabs a').on('shown.bs.tab', function(e) {
