update config options, model

--- a/nautobot_device_onboarding/templates/nautobot_device_onboarding/onboardingconfigsyncdevices_retrieve.html
+++ b/nautobot_device_onboarding/templates/nautobot_device_onboarding/onboardingconfigsyncdevices_retrieve.html
@@ -26,61 +26,61 @@
             <tr>
                 <td>Connectivity Test</td>
                 <td>
-                    {{ object.default_connectivity_test | placeholder }}
+                    {{ object.connectivity_test | placeholder }}
                 </td>
             </tr>
             <tr>
                 <td>Namespace</td>
                 <td>
-                    {{ object.default_namespace | placeholder }}
+                    {{ object.namespace | placeholder }}
                 </td>
             </tr>
             </tr>
                 <td>Device Role</td>
                 <td>
-                    {{ object.default_device_role | placeholder }}
+                    {{ object.device_role | placeholder }}
                 </td>
             <tr>
             </tr>
                 <td>Secrets Group</td>
                 <td>
-                    {{ object.default_secrets_group | placeholder }}
+                    {{ object.secrets_group | placeholder }}
                 </td>
             <tr>
             </tr>
                 <td>Platform</td>
                 <td>
-                    {{ object.default_platform | placeholder }}
+                    {{ object.platform | placeholder }}
                 </td>
             <tr>
             <tr>
                 <td>Device Status</td>
                 <td>
-                    {{ object.default_device_status | hyperlinked_object_with_color }}
+                    {{ object.device_status | hyperlinked_object_with_color }}
                 </td>
             <tr>
             <tr>
                 <td>Interface Status</td>
                 <td>
-                    {{ object.default_interface_status | hyperlinked_object_with_color }}
+                    {{ object.interface_status | hyperlinked_object_with_color }}
                 </td>
             <tr>
             <tr>
                 <td>IP Address Status</td>
                 <td>
-                    {{ object.default_ip_address_status | hyperlinked_object_with_color }}
+                    {{ object.ip_address_status | hyperlinked_object_with_color }}
                 </td>
             <tr>
             </tr>   
                 <td>Port</td>
                 <td>
-                    {{ object.default_port | placeholder }}
+                    {{ object.port | placeholder }}
                 </td>
             <tr>
             </tr>   
                 <td>Timeout</td>
                 <td>
-                    {{ object.default_timeout | placeholder }}
+                    {{ object.timeout | placeholder }}
                 </td>
             <tr>
         </table>
