--- a/nautobot_device_onboarding/templates/nautobot_device_onboarding/onboardingconfigsyncnetworkdatafromnetwork_retrieve.html
+++ b/nautobot_device_onboarding/templates/nautobot_device_onboarding/onboardingconfigsyncnetworkdatafromnetwork_retrieve.html
@@ -26,43 +26,43 @@
             <tr>
                 <td>Connectivity Test</td>
                 <td>
-                    {{ object.default_connectivity_test | placeholder }}
+                    {{ object.connectivity_test | placeholder }}
                 </td>
             </tr>
             </tr>
                 <td>Sync VLANS</td>
                 <td>
-                    {{ object.default_sync_vlans | placeholder }}
+                    {{ object.sync_vlans | placeholder }}
                 </td>
             <tr>
             </tr>
                 <td>Secrets Sync VRFs</td>
                 <td>
-                    {{ object.default_sync_vrfs | placeholder }}
+                    {{ object.sync_vrfs | placeholder }}
                 </td>
             <tr>
             </tr>
                 <td>Sync Cables</td>
                 <td>
-                    {{ object.default_sync_cables | placeholder }}
+                    {{ object.sync_cables | placeholder }}
                 </td>
             <tr>
             <tr>
                 <td>Namespace</td>
                 <td>
-                    {{ object.default_namespace | placeholder }}
+                    {{ object.namespace | placeholder }}
                 </td>
             </tr>
             <tr>
                 <td>Interface Status</td>
                 <td>
-                    {{ object.default_interface_status | hyperlinked_object_with_color }}
+                    {{ object.interface_status | hyperlinked_object_with_color }}
                 </td>
             </tr>
             <tr>
                 <td>IP Address Status</td>
                 <td>
-                    {{ object.default_ip_address_status | hyperlinked_object_with_color }}
+                    {{ object.ip_address_status | hyperlinked_object_with_color }}
                 </td>
             </tr>
             <tr>
