--- a/nautobot_device_onboarding/templates/onboarding_config.html
+++ b/nautobot_device_onboarding/templates/onboarding_config.html
@@ -17,61 +17,61 @@
             <tr>
                 <td>Connectivity Test</td>
                 <td>
-                    {{ object.default_connectivity_test | placeholder }}
+                    {{ object.connectivity_test | placeholder }}
                 </td>
             </tr>
             <tr>
                 <td>Namespace</td>
                 <td>
-                    {{ sync_devices_preferred_config.default_namespace | placeholder }}
+                    {{ sync_devices_preferred_config.namespace | placeholder }}
                 </td>
             </tr>
             </tr>
                 <td>Device Role</td>
                 <td>
-                    {{ sync_devices_preferred_config.default_device_role | placeholder }}
+                    {{ sync_devices_preferred_config.device_role | placeholder }}
                 </td>
             <tr>
             </tr>
                 <td>Secrets Group</td>
                 <td>
-                    {{ sync_devices_preferred_config.default_secrets_group | placeholder }}
+                    {{ sync_devices_preferred_config.secrets_group | placeholder }}
                 </td>
             <tr>
             </tr>
                 <td>Platform</td>
                 <td>
-                    {{ sync_devices_preferred_config.default_platform | placeholder }}
+                    {{ sync_devices_preferred_config.platform | placeholder }}
                 </td>
             <tr>
             <tr>
                 <td>Device Status</td>
                 <td>
-                    {{ sync_devices_preferred_config.default_device_status | hyperlinked_object_with_color }}
+                    {{ sync_devices_preferred_config.device_status | hyperlinked_object_with_color }}
                 </td>
             <tr>
             <tr>
                 <td>Interface Status</td>
                 <td>
-                    {{ sync_devices_preferred_config.default_interface_status | hyperlinked_object_with_color }}
+                    {{ sync_devices_preferred_config.interface_status | hyperlinked_object_with_color }}
                 </td>
             <tr>
             <tr>
                 <td>IP Address Status</td>
                 <td>
-                    {{ sync_devices_preferred_config.default_ip_address_status | hyperlinked_object_with_color }}
+                    {{ sync_devices_preferred_config.ip_address_status | hyperlinked_object_with_color }}
                 </td>
             <tr>
             </tr>   
                 <td>Port</td>
                 <td>
-                    {{ sync_devices_preferred_config.default_port | placeholder }}
+                    {{ sync_devices_preferred_config.port | placeholder }}
                 </td>
             <tr>
             </tr>   
                 <td>Timeout</td>
                 <td>
-                    {{ sync_devices_preferred_config.default_timeout | placeholder }}
+                    {{ sync_devices_preferred_config.timeout | placeholder }}
                 </td>
             <tr>
         </table>
@@ -92,43 +92,43 @@
             <tr>
                 <td>Connectivity Test</td>
                 <td>
-                    {{ sync_network_data_preferred_config.default_connectivity_test | placeholder }}
+                    {{ sync_network_data_preferred_config.connectivity_test | placeholder }}
                 </td>
             </tr>
             </tr>
                 <td>Sync VLANS</td>
                 <td>
-                    {{ sync_network_data_preferred_config.default_sync_vlans | placeholder }}
+                    {{ sync_network_data_preferred_config.sync_vlans | placeholder }}
                 </td>
             <tr>
             </tr>
                 <td>Secrets Sync VRFs</td>
                 <td>
-                    {{ sync_network_data_preferred_config.default_sync_vrfs | placeholder }}
+                    {{ sync_network_data_preferred_config.sync_vrfs | placeholder }}
                 </td>
             <tr>
             </tr>
                 <td>Sync Cables</td>
                 <td>
-                    {{ sync_network_data_preferred_config.default_sync_cables | placeholder }}
+                    {{ sync_network_data_preferred_config.sync_cables | placeholder }}
                 </td>
             <tr>
             <tr>
                 <td>Namespace</td>
                 <td>
-                    {{ sync_network_data_preferred_config.default_namespace | placeholder }}
+                    {{ sync_network_data_preferred_config.namespace | placeholder }}
                 </td>
             </tr>
             <tr>
                 <td>Interface Status</td>
                 <td>
-                    {{ sync_network_data_preferred_config.default_interface_status | hyperlinked_object_with_color }}
+                    {{ sync_network_data_preferred_config.interface_status | hyperlinked_object_with_color }}
                 </td>
             </tr>
             <tr>
                 <td>IP Address Status</td>
                 <td>
-                    {{ sync_network_data_preferred_config.default_ip_address_status | hyperlinked_object_with_color }}
+                    {{ sync_network_data_preferred_config.ip_address_status | hyperlinked_object_with_color }}
                 </td>
             </tr>
             <tr>
