update default config feature

--- a/nautobot_device_onboarding/templates/nautobot_device_onboarding/onboardingconfigsyncdevices_retrieve.html
+++ b/nautobot_device_onboarding/templates/nautobot_device_onboarding/onboardingconfigsyncdevices_retrieve.html
@@ -24,6 +24,12 @@
                 </td>
             </tr>
             <tr>
+                <td>Preferred Config</td>
+                <td>
+                    {{ object.preferred_config | placeholder }}
+                </td>
+            </tr>
+            <tr>
                 <td>Connectivity Test</td>
                 <td>
                     {{ object.connectivity_test | placeholder }}
