--- a/nautobot_device_onboarding/templates/nautobot_device_onboarding/onboardingconfigsyncnetworkdatafromnetwork_retrieve.html
+++ b/nautobot_device_onboarding/templates/nautobot_device_onboarding/onboardingconfigsyncnetworkdatafromnetwork_retrieve.html
@@ -24,6 +24,12 @@
                 </td>
             </tr>
             <tr>
+                <td>Preferred Config</td>
+                <td>
+                    {{ object.preferred_config | placeholder }}
+                </td>
+            </tr>
+            <tr>
                 <td>Connectivity Test</td>
                 <td>
                     {{ object.connectivity_test | placeholder }}
@@ -45,6 +51,12 @@
                 <td>Sync Cables</td>
                 <td>
                     {{ object.sync_cables | placeholder }}
+                </td>
+            <tr>
+            </tr>
+                <td>Sync Software</td>
+                <td>
+                    {{ object.sync_software | placeholder }}
                 </td>
             <tr>
             <tr>
