--- a/nautobot_device_onboarding/templates/onboarding_config.html
+++ b/nautobot_device_onboarding/templates/onboarding_config.html
@@ -113,6 +113,12 @@
                     {{ sync_network_data_preferred_config.sync_cables | placeholder }}
                 </td>
             <tr>
+            </tr>
+                <td>Sync Software</td>
+                <td>
+                    {{ sync_network_data_preferred_config.sync_software | placeholder }}
+                </td>
+            <tr>
             <tr>
                 <td>Namespace</td>
                 <td>
