--- a/nautobot_device_onboarding/templates/nautobot_device_onboarding/ssot_sync_devices.html
+++ b/nautobot_device_onboarding/templates/nautobot_device_onboarding/ssot_sync_devices.html
@@ -3,7 +3,7 @@
 
 {% block job_form %}
 
-{% render_form job_form excluded_fields="['location', 'namespace', 'ip_addresses', 'device_role', 'device_status', 'interface_status', 'ip_address_status', 'port', 'timeout', 'secrets_group', 'platform', 'set_mgmt_only', 'update_devices_without_primary_ip', 'csv_file']" %}
+{% render_form job_form excluded_fields="['location', 'namespace', 'ip_addresses', 'device_role', 'device_status', 'interface_status', 'ip_address_status', 'port', 'timeout', 'secrets_group', 'platform', 'set_mgmt_only', 'update_devices_without_primary_ip', 'csv_file', 'discovered_devices']" %}
 
     {% with csv_tab_active=form.initial.csv_input %}
     <ul class="nav nav-tabs" role="tablist">
@@ -12,6 +12,9 @@
         </li>
         <li role="presentation"{% if csv_tab_active %} class="active"{% endif %}>
             <a href="#job_csv_input" role="tab" data-toggle="tab">CSV Input</a>
+        </li>
+        <li role="presentation"{% if csv_tab_active %} class="active"{% endif %}>
+            <a href="#job_discovered_devices" role="tab" data-toggle="tab">Discovered Devices</a>
         </li>
     </ul>
     <div class="tab-content">
@@ -33,6 +36,9 @@
         <div id="job_csv_input" class="tab-pane{% if csv_tab_active %} active{% endif %}">
             {% render_field job_form.csv_file %}
         </div>
+        <div id="job_discovered_devices" class="tab-pane{% if csv_tab_active %} active{% endif %}">
+            {% render_field job_form.discovered_devices %}
+        </div>
     </div>
     {% endwith %}
 
@@ -42,6 +48,7 @@
   {{ block.super }}
   <script>
     const csvInput = document.getElementById('id_csv_file');
+    const discoveredInput = document.getElementById('id_discovered_devices');
     const manualRequiredFields = [
       "id_location", "id_namespace", "id_ip_addresses", "id_device_role", 
       "id_device_status", "id_interface_status", "id_ip_address_status", 
@@ -65,10 +72,16 @@
       $('.nav-tabs a').on('shown.bs.tab', function(e) {
         const activeTab = $(e.target).attr('href');
         const isManualInputTab = activeTab === '#job_manual_input';
+        const isCSVFileTab = activeTab === '#job_csv_input';
+        const isDiscoveredTab = activeTab === '#job_discovered_devices';
 
         csvInput.value = '';
-        csvInput.required = !isManualInputTab;
-        document.querySelector('label[for="id_csv_file"]').classList.toggle('required', !isManualInputTab);
+        csvInput.required = isCSVFileTab;
+        document.querySelector('label[for="id_csv_file"]').classList.toggle('required', isCSVFileTab);
+
+        discoveredInput.value = '';
+        discoveredInput.required = isDiscoveredTab;
+        document.querySelector('label[for="id_discovered_devices"]').classList.toggle('required', isDiscoveredTab);
 
         manualRequiredFields.forEach(field => setFieldRequired(field, isManualInputTab));
       });
