move ip address to regular field

--- a/nautobot_device_onboarding/templates/nautobot_device_onboarding/discovereddevice_retrieve.html
+++ b/nautobot_device_onboarding/templates/nautobot_device_onboarding/discovereddevice_retrieve.html
@@ -50,6 +50,10 @@
                         <td>{{ object.location|placeholder }}</td>
                     </tr>
                     <tr>
+                        <td>IP Address Namespace</td>
+                        <td>{{ object.namespace|placeholder }}</td>
+                    </tr>
+                    <tr>
                         <td>Device Role</td>
                         <td>{{ object.device_role|placeholder }}</td>
                     </tr>
