update discovered device attributes

--- a/nautobot_device_onboarding/templates/nautobot_device_onboarding/discovereddevice_retrieve.html
+++ b/nautobot_device_onboarding/templates/nautobot_device_onboarding/discovereddevice_retrieve.html
@@ -17,7 +17,7 @@
                     </tr>
                     <tr>
                         <td>Last Successful TCP Response</td>
-                        <td>{{ object.last_successful_tcp_response|placeholder }}</td>
+                        <td>{{ object.tcp_response_datetime|placeholder }}</td>
                     </tr>
                     <tr>
                         <td>SSH Response</td>
@@ -25,7 +25,7 @@
                     </tr>
                     <tr>
                         <td>Last Successful SSH Response</td>
-                        <td>{{ object.last_successful_ssh_response|placeholder }}</td>
+                        <td>{{ object.ssh_response_datetime|placeholder }}</td>
                     </tr>
                 </table>
             </div>
