--- a/nautobot_device_onboarding/templates/nautobot_device_onboarding/discovereddevice_retrieve.html
+++ b/nautobot_device_onboarding/templates/nautobot_device_onboarding/discovereddevice_retrieve.html
@@ -27,6 +27,10 @@
                         <td>Last Successful SSH Response</td>
                         <td>{{ object.ssh_response_datetime|placeholder }}</td>
                     </tr>
+                    <tr>
+                        <td>Inventory Status</td>
+                        <td>{{ object.inventory_status|placeholder }}</td>
+                    </tr>
                 </table>
             </div>
 {% endblock content_left_page %}
